_sdbm.c: ruby/ruby.h for PRIdPTRDIFF

* ext/sdbm/_sdbm.c: include ruby/ruby.h for PRIdPTRDIFF when a
  macro `DEBUG` is defined.  based on the patch by Owen Rodley in
  [ruby-core:67987]. [Bug #10825]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@49490 b2dd03c8-39d4-4d8f-98ff-823fe69b080e